# code-review-agent

./: .ai-review.yaml  .env.example  .gitignore  CLAUDE.md  PRD.md  README.md  SPEC.md  progress.txt  pyproject.toml  test-scenarios.example.yaml
.github/workflows/: pr-review-reusable.yml  pr-review.yml
dashboard/: package-lock.json  package.json  tsconfig.tsbuildinfo
database/: schema.sql
docs/: AGENTIC_CAPABILITIES_SPEC.md  DEMO_QUICK_REF.md  DEPLOYMENT.md  LOCAL_DEVELOPMENT.md  TEST_PLAN.md
docs/plans/: 2026-01-21-phase1-core-cli.md  2026-01-21-phase2-phase3-github-metrics-dashboard.md
evals/: __init__.py  calibration.py  runner.py  scoring.py
evals/calibration_data/: sample_outcomes.yaml
evals/cases/: hardcoded_secret.yaml  large_function.yaml  sql_injection.yaml  (+3 more)
tests/: conftest.py  test_approval.py  test_budget_monitor.py  test_calibration.py  test_chunker.py  test_circuit_breaker.py  test_confidence.py  test_config.py  test_console_output.py  test_coverage_gate.py  test_degradation.py  test_dependency_gate.py  test_evals.py  test_file_classifiers.py  test_fingerprint.py  test_github_client.py  test_github_comment.py  test_history.py  test_inline_comments.py  test_lint_gate.py  test_llm_reviewer.py  test_main.py  test_mcp_integration.py  test_mcp_resources.py  test_mcp_server.py  test_mcp_tools.py  test_model_selector.py  test_retry_observability.py  test_sanitizer.py  test_secret_scanner.py  test_security_gate.py  test_size_gate.py  test_suggested_fixes.py  test_suggestion_validator.py  test_supabase_logger.py  test_token_tracker.py  test_webhook.py
(+60 files in other folders)
