[project]
name = "pr-review-agent"
version = "0.1.0"
description = "AI-powered PR review agent with deterministic gates"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "pygithub>=2.5.0",
    "pyjwt>=2.8.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "supabase>=2.0.0",
]

[project.scripts]
pr-review-agent = "pr_review_agent.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pr_review_agent"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=7.0.0",
    "ruff>=0.9.0",
]
